[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Knight.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 72, 32 )
z_index = 1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PlayerArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_drag_margin = true
script = ExtResource( 3 )

[connection signal="tree_exiting" from="." to="." method="_on_Player_tree_exiting"]
[connection signal="body_entered" from="PlayerArea" to="." method="path_entered"]
[connection signal="body_exited" from="PlayerArea" to="." method="path_exited"]
